# llm-app

./: Dockerfile  README.md  app.py  llm.py  local_llm.py  prompt.py  pyproject.toml  start.sh
