[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = ""
authors = ["umepy <haruya04183083@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
openai = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
