[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = ""
authors = ["umepy <haruya04183083@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
openai = "^1.6.1"
transformers = "^4.36.2"
torch = {version = "^2.0.1+cu118", source = "torch-cu118"}
sentencepiece = "^0.1.99"accelerate = "^0.25.0"

[[tool.poetry.source]]
name = "torch-cu118"

url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

